# readability

./: Cargo.toml  README.md
data/: tweakers.html
src/: dom.rs  error.rs  extractor.rs  scorer.rs
tests/: lib.rs
